add base caption

--- a/generation/dataset_gen.ipynb
+++ b/generation/dataset_gen.ipynb
@@ -2,109 +2,272 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset of 2 entries saved to synthetic_robot_action_dataset.json\n"
+     ]
+    }
+   ],
    "source": [
-    "import openai\n",
-    "import random\n",
+    "from openai import OpenAI\n",
     "import json\n",
     "\n",
-    "# Configure OpenAI API key\n",
-    "openai.api_key = \"your_openai_api_key\"\n",
+    "client = OpenAI()\n",
+    "# Define the number of entries to generate\n",
+    "dataset_size = 2  # Replace with your desired dataset size\n",
     "\n",
-    "# Define available actions\n",
-    "actions = [\n",
-    "    \"move forward\", \"move backward\", \"turn left\", \"turn right\",\n",
-    "    \"pick up object\", \"place object\", \"navigate to\", \"stop\",\n",
-    "    \"inspect\", \"signal\"\n",
+    "# Initialize an empty list to store dataset entries\n",
+    "dataset = []\n",
+    "\n",
+    "# Define dynamic actions and objects\n",
+    "object_context_template = [\n",
+    "    \"Apple on the shelf (5m), red valve (2m)\",\n",
+    "    \"Box on the floor (3m), green button (4m)\",\n",
+    "    \"Chair in the corner (6m), yellow light switch (2m)\"\n",
     "]\n",
     "\n",
-    "# Define visible objects in the environment\n",
-    "visible_objects = [\"red ball\", \"blue cube\", \"green pyramid\", \"charging station\", \"door\"]\n",
+    "available_actions_template = [\n",
+    "    [\"NavigateTo\", \"Pick\", \"PressButton\"],\n",
+    "    [\"NavigateTo\", \"TurnLightOn\", \"MoveBox\"],\n",
+    "    [\"NavigateTo\", \"CloseValve\", \"PickUpChair\"]\n",
+    "]\n",
     "\n",
-    "# Random distance generator\n",
-    "def random_distance():\n",
-    "    return round(random.uniform(0.5, 10.0), 2)\n",
-    "\n",
-    "# Prompt template for the OpenAI API\n",
-    "def generate_prompt(action, visible_object, distance):\n",
-    "    return f\"\"\"\n",
-    "The robot is capable of performing the following actions: {', '.join(actions)}.\n",
-    "The robot can see the following objects: {', '.join(visible_objects)}.\n",
-    "The robot is currently {distance} meters away from the {visible_object}.\n",
-    "\n",
-    "You will create a training dataset entry to teach a small LLM to make decisions. The dataset will include:\n",
-    "1. Query: A question the user might ask the robot.\n",
-    "2. Answer: A text response with a verbal detailed plan for the robot to achieve the task.\n",
-    "3. Behavior Tree: A behavior tree representing the actions needed, or an empty string if none is required.\n",
-    "\n",
-    "Generate:\n",
-    "- A plausible user query involving the action \"{action}\" and the object \"{visible_object}\".\n",
-    "- A detailed text response explaining the plan and identifying missing actions if applicable.\n",
-    "- A behavior tree that represents the solution.\n",
-    "\n",
-    "Format the output as:\n",
-    "Query: ...\n",
-    "Answer: ...\n",
-    "Behavior Tree: ...\n",
+    "# Loop to generate dataset entries\n",
+    "for i in range(dataset_size):\n",
+    "    # Randomly select object context and available actions\n",
+    "    object_context = object_context_template[i % len(object_context_template)]\n",
+    "    available_actions = available_actions_template[i % len(available_actions_template)]\n",
+    "    \n",
+    "    # Step 1: Generate a human-like query\n",
+    "    query_prompt = f\"\"\"\n",
+    "You are simulating a human planning a task for a robot. \n",
+    "Object Context: {object_context}\n",
+    "Available Actions: {', '.join(available_actions)}\n",
+    "Generate a query for the robot based on the given context and actions.\n",
     "\"\"\"\n",
-    "\n",
-    "# Function to generate a single dataset entry using the OpenAI API\n",
-    "def generate_entry():\n",
-    "    action = random.choice(actions)\n",
-    "    visible_object = random.choice(visible_objects)\n",
-    "    distance = random_distance()\n",
     "    \n",
-    "    prompt = generate_prompt(action, visible_object, distance)\n",
-    "    \n",
-    "    # Call the OpenAI API\n",
-    "    response = openai.Completion.create(\n",
-    "        engine=\"text-davinci-004\",  # Use the appropriate engine for your case\n",
-    "        prompt=prompt,\n",
-    "        max_tokens=500,\n",
+    "    query_response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",  # Update with your desired model\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are an assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": query_prompt}\n",
+    "        ],\n",
+    "        max_tokens=50,\n",
     "        temperature=0.7\n",
     "    )\n",
     "    \n",
-    "    # Parse the response into structured data\n",
-    "    try:\n",
-    "        output = response[\"choices\"][0][\"text\"].strip()\n",
-    "        query, answer, behavior_tree = map(str.strip, output.split(\"\\n\", 2))\n",
-    "        return {\n",
-    "            \"query\": query.replace(\"Query: \", \"\").strip(),\n",
-    "            \"answer\": answer.replace(\"Answer: \", \"\").strip(),\n",
-    "            \"behavior_tree\": behavior_tree.replace(\"Behavior Tree: \", \"\").strip()\n",
-    "        }\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error parsing response: {e}\")\n",
-    "        return None\n",
-    "\n",
-    "# Generate the full dataset\n",
-    "def generate_dataset(num_samples=100):\n",
-    "    dataset = []\n",
-    "    for _ in range(num_samples):\n",
-    "        entry = generate_entry()\n",
-    "        if entry:\n",
-    "            dataset.append(entry)\n",
-    "    return dataset\n",
+    "    query = query_response.choices[0].message.content.strip()\n",
+    "    \n",
+    "    # Step 2: Generate the answer for the query\n",
+    "    answer_prompt = f\"\"\"\n",
+    "Object Context: {object_context}\n",
+    "Available Actions: {', '.join(available_actions)}\n",
+    "Query: {query}\n",
+    "Generate an action plan for the robot to execute this task. Include a behavior tree or state if the task is impossible.\n",
+    "\"\"\"\n",
+    "    \n",
+    "    answer_response = client.chat.completions.create(\n",
+    "        model=\"gpt-4\",  # Update with your desired model\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are an assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": answer_prompt}\n",
+    "        ],\n",
+    "        max_tokens=150,\n",
+    "        temperature=0.7\n",
+    "    )\n",
+    "    \n",
+    "    answer = answer_response.choices[0].message.content.strip()\n",
+    "    \n",
+    "    # Example BT for this case\n",
+    "    if \"impossible\" in answer.lower():\n",
+    "        bt = \"<?xml version=\\\"1.0\\\"?>\\n<root main_tree_to_execute=\\\"BehaviorTree\\\">\\n<EmptyTree/>\\n</root>\"\n",
+    "    else:\n",
+    "        bt = f\"\"\"<?xml version=\"1.0\"?>\n",
+    "<root main_tree_to_execute=\"BehaviorTree\">\n",
+    "    <BehaviorTree ID=\"GeneratedPlan\">\n",
+    "        <Sequence name=\"TaskSequence\">\n",
+    "            <Task description=\"{query}\"/>\n",
+    "        </Sequence>\n",
+    "    </BehaviorTree>\n",
+    "</root>\"\"\"\n",
+    "    \n",
+    "    # Append the entry to the dataset\n",
+    "    dataset_entry = {\n",
+    "        \"object_context\": object_context,\n",
+    "        \"available_actions\": available_actions,\n",
+    "        \"query\": query,\n",
+    "        \"answer\": answer,\n",
+    "        \"behavior_tree\": bt\n",
+    "    }\n",
+    "    dataset.append(dataset_entry)\n",
     "\n",
     "# Save the dataset to a JSON file\n",
-    "def save_dataset(dataset, filename=\"robot_training_dataset.json\"):\n",
-    "    with open(filename, \"w\") as f:\n",
-    "        json.dump(dataset, f, indent=4)\n",
+    "output_file = \"synthetic_robot_action_dataset.json\"\n",
+    "with open(output_file, \"w\") as file:\n",
+    "    json.dump(dataset, file, indent=4)\n",
     "\n",
-    "# Generate and save the dataset\n",
-    "if __name__ == \"__main__\":\n",
-    "    num_samples = 100  # Adjust the number of samples as needed\n",
-    "    dataset = generate_dataset(num_samples)\n",
-    "    save_dataset(dataset)\n",
-    "    print(f\"Dataset saved to robot_training_dataset.json\")\n"
+    "print(f\"Dataset of {dataset_size} entries saved to {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "json_file = \"captions_val2017.json\"\n",
+    "\n",
+    "with open(json_file, 'r') as f:\n",
+    "    coco_data = json.load(f)\n",
+    "\n",
+    "# Convert to DataFrame - adjust these fields based on what you need from the COCO data\n",
+    "df = pd.DataFrame(coco_data['annotations'])\n",
+    "df = df[df['caption'].str.split().str.len() < 12]\n",
+    "\n",
+    "df = df.drop(columns=['id', 'image_id'])\n",
+    "\n",
+    "# convert to json\n",
+    "df.to_json('captions.json', orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_file = \"objects.json\"\n",
+    "\n",
+    "with open(json_file, 'r') as f:\n",
+    "    coco_data = json.load(f)\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(coco_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>objects</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>merged_object_ids</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'synsets': ['tree.n.01'], 'h': 557, 'object_...</td>\n",
+       "      <td>https://cs.stanford.edu/people/rak248/VG_100K_...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[{'synsets': ['road.n.01'], 'h': 254, 'object_...</td>\n",
+       "      <td>https://cs.stanford.edu/people/rak248/VG_100K_...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[{'synsets': ['booth.n.02'], 'h': 389, 'object...</td>\n",
+       "      <td>https://cs.stanford.edu/people/rak248/VG_100K_...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[{'synsets': ['floor.n.01'], 'h': 168, 'object...</td>\n",
+       "      <td>https://cs.stanford.edu/people/rak248/VG_100K_...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[{'synsets': ['room.n.01'], 'h': 599, 'object_...</td>\n",
+       "      <td>https://cs.stanford.edu/people/rak248/VG_100K_...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   image_id                                            objects  \\\n",
+       "0         1  [{'synsets': ['tree.n.01'], 'h': 557, 'object_...   \n",
+       "1         2  [{'synsets': ['road.n.01'], 'h': 254, 'object_...   \n",
+       "2         3  [{'synsets': ['booth.n.02'], 'h': 389, 'object...   \n",
+       "3         4  [{'synsets': ['floor.n.01'], 'h': 168, 'object...   \n",
+       "4         5  [{'synsets': ['room.n.01'], 'h': 599, 'object_...   \n",
+       "\n",
+       "                                           image_url merged_object_ids  \n",
+       "0  https://cs.stanford.edu/people/rak248/VG_100K_...               NaN  \n",
+       "1  https://cs.stanford.edu/people/rak248/VG_100K_...               NaN  \n",
+       "2  https://cs.stanford.edu/people/rak248/VG_100K_...               NaN  \n",
+       "3  https://cs.stanford.edu/people/rak248/VG_100K_...               NaN  \n",
+       "4  https://cs.stanford.edu/people/rak248/VG_100K_...               NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
