add ros2 behavior tree package

--- a/generation/dataset_gen.ipynb
+++ b/generation/dataset_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -242,15 +242,15 @@
       "You are simulating a human planning a task for a robot. The robot is equipped with sensors, manipulators, and mobility capabilities, and can perform tasks based on the objects in its environment and the actions available. It can also plan multi-step tasks or respond to impossible queries by indicating they cannot be completed.\n",
       "\n",
       "Object Context: \n",
-      "a man in a yellow shirt and black shorts (37.4m)\n",
-      "a cow grazing on a grassy hill (90.3m)\n",
-      "a bunch of papers on a wooden shelf (64.8m)\n",
+      "a group of people riding horses in a forest (37.4m)\n",
+      "a stop sign on a street (90.3m)\n",
+      "a white toilet (64.8m)\n",
       "\n",
       "Actions Dictionary:\n",
-      "RequestAssistance: Requests help for a specific task. (Arguments: task)\n",
-      "Pick: Picks up a specified object. (Arguments: object)\n",
-      "MoveForward: Moves the robot forward by a specified distance. (Arguments: distance)\n",
-      "RecoverFromError: Attempts to recover from a detected error. (Arguments: )\n",
+      "CheckBatteryLevel: Checks the robot's current battery level. (Arguments: )\n",
+      "ReportError: Reports an encountered error to the user. (Arguments: error)\n",
+      "LogEvent: Logs an event or data point for future reference. (Arguments: event)\n",
+      "ToggleSwitch: Toggles a switch on or off. (Arguments: switch)\n",
       "\n",
       "Generate a human-like query for the robot based on the given context and actions. Ensure that the queries vary in complexity:\n",
       "- Some queries should be straightforward (e.g., single-step tasks).\n",
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
       "</root>\n",
       "\n",
       "\n",
-      "The answer must contains only those two parts (Explanation and Behavior Tree XML).\n",
+      "The answer must contains only those two parts (Explanation and Behavior Tree XML). \n",
       "Query: Go find something to eat that's not too salty.\n",
       "\n"
      ]
@@ -466,7 +466,7 @@
     "</root>\n",
     "\n",
     "\n",
-    "The answer must contains only those two parts (Explanation and Behavior Tree XML).\n",
+    "The answer must contains only those two parts (Explanation and Behavior Tree XML). \n",
     "Query: {query}\n",
     "\"\"\" # Generate samples for object context and actions \n",
     "  \n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
       "</root>\n",
       "\n",
       "\n",
-      "The answer must contains only those two parts (Explanation and Behavior Tree XML).\n",
+      "The answer must contains only those two parts (Explanation and Behavior Tree XML). \n",
       "Query: Go find something to eat that's not too salty.\n"
      ]
     }
@@ -544,14 +544,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset of 3 entries generated\n"
+      "Dataset of 100 entries generated\n"
      ]
     }
    ],
@@ -600,14 +600,26 @@
     "    return dataset\n",
     "\n",
     "# Generate the dataset\n",
-    "dataset = generate_dataset(df_captions, df_robot_actions, dataset_size=3)"
+    "dataset = generate_dataset(df_captions, df_robot_actions, dataset_size=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid behavior tree: [\"Unexpected error: [Errno 2] No such file or directory: ''\"]\n",
+      "Invalid behavior tree: [\"Unexpected error: [Errno 2] No such file or directory: ''\"]\n",
+      "Invalid behavior tree: [\"Unexpected error: [Errno 2] No such file or directory: ''\"]\n",
+      "Invalid behavior tree: ['XML Parsing Error: mismatched tag: line 23, column 12']\n",
+      "Invalid behavior tree: [\"Unexpected error: [Errno 2] No such file or directory: ''\"]\n"
+     ]
+    }
+   ],
    "source": [
     "# validate the behavior tree\n",
     "for entry in dataset:\n",
@@ -618,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
